--- a/references.bib
+++ b/references.bib
@@ -407,3 +407,21 @@ Publisher: John Wiley \& Sons, Ltd},
 	keywords = {Messenger {RNA}, Protein synthesis, Ribosome, Scanning model, Translation initiation factors},
 	file = {ScienceDirect Snapshot:C\:\\Users\\LiTag\\Zotero\\storage\\PU6JVBSV\\S0378111999002103.html:text/html},
 }
+
+@article{sidrauski_pharmacological_2013,
+	title = {Pharmacological brake-release of {mRNA} translation enhances cognitive memory},
+	volume = {2},
+	issn = {2050-084X},
+	url = {https://doi.org/10.7554/eLife.00498},
+	doi = {10.7554/eLife.00498},
+	abstract = {Phosphorylation of the α-subunit of initiation factor 2 ({eIF}2) controls protein synthesis by a conserved mechanism. In metazoa, distinct stress conditions activate different {eIF}2α kinases ({PERK}, {PKR}, {GCN}2, and {HRI}) that converge on phosphorylating a unique serine in {eIF}2α. This collection of signaling pathways is termed the ‘integrated stress response’ ({ISR}). {eIF}2α phosphorylation diminishes protein synthesis, while allowing preferential translation of some {mRNAs}. Starting with a cell-based screen for inhibitors of {PERK} signaling, we identified a small molecule, named {ISRIB}, that potently ({IC}50 = 5 {nM}) reverses the effects of {eIF}2α phosphorylation. {ISRIB} reduces the viability of cells subjected to {PERK}-activation by chronic endoplasmic reticulum stress. {eIF}2α phosphorylation is implicated in memory consolidation. Remarkably, {ISRIB}-treated mice display significant enhancement in spatial and fear-associated learning. Thus, memory consolidation is inherently limited by the {ISR}, and {ISRIB} releases this brake. As such, {ISRIB} promises to contribute to our understanding and treatment of cognitive disorders.},
+	pages = {e00498},
+	journaltitle = {{eLife}},
+	author = {Sidrauski, Carmela and Acosta-Alvear, Diego and Khoutorsky, Arkady and Vedantham, Punitha and Hearn, Brian R and Li, Han and Gamache, Karine and Gallagher, Ciara M and Ang, Kenny K-H and Wilson, Chris and Okreglak, Voytek and Ashkenazi, Avi and Hann, Byron and Nader, Karim and Arkin, Michelle R and Renslo, Adam R and Sonenberg, Nahum and Walter, Peter},
+	editor = {Ron, David},
+	urldate = {2025-01-20},
+	date = {2013-05-28},
+	note = {Publisher: {eLife} Sciences Publications, Ltd},
+	keywords = {{ATF}4, {eIF}2, {eIF}2B, integrated stress response, memory consolidation, unfolded protein response},
+	file = {Full Text PDF:C\:\\Users\\LiTag\\Zotero\\storage\\22PB79NC\\Sidrauski et al. - 2013 - Pharmacological brake-release of mRNA translation enhances cognitive memory.pdf:application/pdf},
+}
