--- a/references.bib
+++ b/references.bib
@@ -425,3 +425,30 @@ Publisher: John Wiley \& Sons, Ltd},
 	keywords = {{ATF}4, {eIF}2, {eIF}2B, integrated stress response, memory consolidation, unfolded protein response},
 	file = {Full Text PDF:C\:\\Users\\LiTag\\Zotero\\storage\\22PB79NC\\Sidrauski et al. - 2013 - Pharmacological brake-release of mRNA translation enhances cognitive memory.pdf:application/pdf},
 }
+
+@online{noauthor_semi-dry_nodate,
+	title = {Semi-dry Western Blot Transfer {\textbar} Sino Biological},
+	url = {https://kr.sinobiological.com/category/wb-semi-dry-transfer},
+	urldate = {2025-01-21},
+	file = {Semi-dry Western Blot Transfer | Sino Biological:C\:\\Users\\LiTag\\Zotero\\storage\\527I2F4Z\\wb-semi-dry-transfer.html:text/html},
+}
+
+@article{chou_mtor_2012,
+	title = {{mTOR} Is Essential for the Proteotoxic Stress Response, {HSF}1 Activation and Heat Shock Protein Synthesis},
+	volume = {7},
+	issn = {1932-6203},
+	url = {https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0039679},
+	doi = {10.1371/journal.pone.0039679},
+	abstract = {The target of rapamycin ({TOR}) is a high molecular weight protein kinase that regulates many processes in cells in response to mitogens and variations in nutrient availability. Here we have shown that {mTOR} in human tissue culture cells plays a key role in responses to proteotoxic stress and that reduction in {mTOR} levels by {RNA} interference leads to increase sensitivity to heat shock. This effect was accompanied by a drastic reduction in ability to synthesize heat shock proteins ({HSP}), including Hsp70, Hsp90 and Hsp110. As {HSP} transcription is regulated by heat shock transcription factor 1 ({HSF}1), we examined whether {mTOR} could directly phosphorylate this factor. Indeed, we determined that {mTOR} could directly phosphorylate {HSF}1 on serine 326, a key residue in transcriptional activation. {HSF}1 was phosphorylated on S326 immediately after heat shock and was triggered by other cell stressors including proteasome inhibitors and sodium arsenite. Null mutation of S326 to alanine led to loss of ability to activate an {HSF}1-regulated promoter-reporter construct, indicating a direct role for {mTOR} and S326 in transcriptional regulation of {HSP} genes during stress. As {mTOR} is known to exist in at least two intracellular complexes, {mTORC}1 and {mTOR}2 we examined which complex might interact with {HSF}1. Indeed {mTORC}1 inhibitor rapamycin prevented {HSF}1-S326 phosphorylation, suggesting that this complex is involved in {HSF}1 regulation in stress. Our experiments therefore suggest a key role for {mTORC}1 in transcriptional responses to proteotoxic stress.},
+	pages = {e39679},
+	number = {6},
+	journaltitle = {{PLOS} {ONE}},
+	shortjournal = {{PLOS} {ONE}},
+	author = {Chou, Shiuh-Dih and Prince, Thomas and Gong, Jianlin and Calderwood, Stuart K.},
+	urldate = {2025-01-21},
+	date = {2012-06-29},
+	langid = {english},
+	note = {Publisher: Public Library of Science},
+	keywords = {Cellular stress responses, Heat shock response, {HeLa} cells, Phosphorylation, Plasmid construction, Serine, Transcriptional control, Transfection},
+	file = {Full Text PDF:C\:\\Users\\LiTag\\Zotero\\storage\\S5RKQVU4\\Chou et al. - 2012 - mTOR Is Essential for the Proteotoxic Stress Response, HSF1 Activation and Heat Shock Protein Synthe.pdf:application/pdf},
+}
